# mohg-outbox-pattern

./: Dockerfile  LICENSE  docker-compose.yaml  main.py  pyproject.toml
src/adapters/controllers/: __init__.py  rental_controller.py
src/adapters/controllers/exceptions/: controller_base_exception.py  controller_exceptions.py  controller_exceptions_reasons_enum.py
src/adapters/extensions/: register_rental_extension.py  rental_extension.py
src/adapters/extensions/base/: base_controller_extension.py
src/adapters/extensions/exceptions/: extension_base_exception.py  extension_exceptions.py  extension_exceptions_reasons_enum.py
src/adapters/repositories/exceptions/: repository_exceptions.py  repository_exceptions_reasons_enum.py
src/adapters/repositories/kafka/: kafka_rental_events_repository.py
src/adapters/repositories/mongo_db/: rental_repository.py
src/domain/entities/: rental_entity.py
src/domain/entities/value_objects/: date_entity.py  id_entity.py
src/domain/enums/: rental_period_enum.py
src/domain/exceptions/: entity_exceptions.py  entity_exceptions_reasons_enum.py
src/domain/models/: rental_event_message_model.py  rental_event_model.py  rental_model.py
src/use_cases/data_types/dtos/: register_rental_dto.py  rental_dto.py
src/use_cases/data_types/requests/: register_rental_request.py
src/use_cases/data_types/responses/: register_rental_response.py
src/use_cases/exceptions/: use_case_exceptions.py  use_case_exceptions_reasons_enum.py
src/use_cases/publishers/: rental_events_publisher.py
src/use_cases/rental/: register_rental_use_case.py
(+10 files in other folders)
